tests/ui/typeck/explain_clone_autoref.stderr
error[E0308]: mismatched types
  --> $DIR/explain_clone_autoref.rs:9:5
   |
LL | fn clone_thing(nc: &NotClone) -> NotClone {
   |                                  -------- expected `NotClone` because of return type
LL |
LL |     nc.clone()
   |     ^^^^^^^^^^ expected `NotClone`, found `&NotClone`
   |
note: `NotClone` does not implement `Clone`, so `&NotClone` was cloned instead
  --> $DIR/explain_clone_autoref.rs:9:5
   |
LL |     nc.clone()
   |     ^^
help: consider annotating `NotClone` with `#[derive(Clone)]`
   |
LL + #[derive(Clone)]
LL | struct NotClone;
   |

error[E0308]: mismatched types
  --> $DIR/explain_clone_autoref.rs:16:24
   |
LL |     let nc: NotClone = nc.clone();
   |             --------   ^^^^^^^^^^ expected `NotClone`, found `&NotClone`
   |             |
   |             expected due to this
   |
note: `NotClone` does not implement `Clone`, so `&NotClone` was cloned instead
  --> $DIR/explain_clone_autoref.rs:16:24
   |
LL |     let nc: NotClone = nc.clone();
   |                        ^^
help: consider annotating `NotClone` with `#[derive(Clone)]`
   |
LL + #[derive(Clone)]
LL | struct NotClone;
   |

error[E0308]: mismatched types
  --> $DIR/explain_clone_autoref.rs:28:5
   |
LL | fn clone_thing3(nc: &NotClone) -> NotClone {
   |                                   -------- expected `NotClone` because of return type
...
LL |     nc
   |     ^^ expected `NotClone`, found `&NotClone`
   |
note: `NotClone` does not implement `Clone`, so `&NotClone` was cloned instead
  --> $DIR/explain_clone_autoref.rs:26:14
   |
LL |     let nc = nc.clone();
   |              ^^
help: consider annotating `NotClone` with `#[derive(Clone)]`
   |
LL + #[derive(Clone)]
LL | struct NotClone;
   |

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
